# opensecagent

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  PUBLISH.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: default.yaml  test.yaml
deploy/: README-DEPLOY.md  config-home-server.example.yaml  install-from-github.sh  install-on-server.sh
opensecagent/: __init__.py  __main__.py  ascii_art.py  cli.py  config.py  daemon.py  llm_advisor.py  llm_agent.py  llm_client.py  main.py  models.py  normalizer.py  policy_engine.py  prompts.py  responder.py  threat_registry.py
opensecagent/collector/: __init__.py  docker_collector.py  drift.py  host.py
opensecagent/config/: default.yaml
opensecagent/detector/: __init__.py  auth.py  containers.py  firewall.py  manager.py  network.py  nginx_audit.py  npm_audit.py  php_scan.py  ports.py  resources.py  users.py
opensecagent/reporter/: __init__.py  activity.py  audit.py  email_reporter.py  manager.py  pdf_report.py
scripts/: README-SIMULATE-ATTACK.md  install.sh  simulate_attack.py
systemd/: opensecagent-user.service  opensecagent.service
tests/: __init__.py  test_models.py
